# Ohara

./: .gitignore  README.md  ohara:review  pyproject.toml
docs/: architecture.md  configuration.md  execution-flow.md  extensions.md  templates.md
docs/superpowers/plans/: 2026-05-16-ohara-review.md
docs/superpowers/specs/: 2026-05-16-ohara-review-design.md
ohara/: __init__.py  __main__.py
ohara/automation/: __init__.py  base.py  chatgpt.py
ohara/cli/: app.py  review.py
ohara/config/: __init__.py  models.py
ohara/context/: __init__.py  builder.py  models.py  scanner.py
ohara/parsers/: __init__.py  json_parser.py
ohara/reviews/: __init__.py  orchestrator.py
ohara/schemas/: __init__.py  review.py
ohara/storage/: __init__.py  filesystem.py
ohara/templates/: __init__.py  base.py  registry.py
ohara/utils/: __init__.py
skills/ohara-review/: SKILL.md
skills/ohara-review/agents/: openai.yaml
skills/ohara-review/scripts/: link-skill.sh
tests/: test_context.py  test_orchestrator_cli.py  test_parser_storage.py  test_templates_and_schemas.py
