[project]
name = "ohara"
version = "0.1.0"
description = "AI-powered repository intelligence and deep review platform for Codex workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.0",
    "rich>=14.0.0",
    "typer>=0.15.0",
]

[project.scripts]
ohara = "ohara.cli.app:app"
ohara-review = "ohara.cli.review:app"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ohara"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
